Created the basic structure of the calculator

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <script src="scripts/script.js" defer></script>
-    <link rel="stylesheet" href="styles/style.css">
-    <title>Calculator</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <script src="scripts/script.js" defer></script>
+        <link rel="stylesheet" href="styles/style.css">
+        <title>Calculator</title>
+    </head>
+    <body>
+        <main>
+            <div id="input-box"></div>
+            <div id="main-button-container"></div>
+        </main>
+    </body>
 </html>
