--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <main>
-            <div id="input-box"></div>
+            <div id="input-box">
+                <div id="display"></div>
+            </div>
             <div id="main-button-container"></div>
         </main>
     </body>
