--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <script src="scripts/script.js" defer></script>
-        <link rel="stylesheet" href="styles/style.css">
+        <link href="style.css" rel="stylesheet">
+        <script src="script.js" defer></script>
         <title>Calculator</title>
     </head>
+
     <body>
-        <main>
-            <div id="input-box">
-                <div id="display"></div>
-            </div>
-            <div id="main-button-container"></div>
-        </main>
+        <main id="calculator">
+            <div id="display"></div>
+            <div id="buttons-container"></div>
+        </main>    
     </body>
 </html>
