--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     <body>
         <main id="calculator">
-            <div id="display"></div>
+            <div id="display-container">
+                <div id="display"></div>
+            </div>
             <div id="buttons-container"></div>
         </main>    
     </body>
